# wbs-mcp-server

./: .gitignore  CHANGELOG.md  DELIVERY-COMPLETE.md  DELIVERY-SUMMARY.md  GENERALIZATION.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: GITHUB-INTEGRATION.md  NEXT-STEPS.md  PHASE2-REQUIREMENTS.md  REFACTORING-SUMMARY.md  RELEASE-PROCESS.md  SETUP.md  TOOLS.md  WBS-ID-FORMAT.md
tests/: test_data_loader.py  test_yaml_writer.py
tests/fixtures/: work-items.yaml
wbs_mcp/: __init__.py  data_loader.py  github_sync.py  models.py  server.py  yaml_writer.py
wbs_mcp/tools/: __init__.py  find_orphans.py  get_hierarchy.py  get_milestone_coverage.py  pr_review_read.py  pr_review_write.py  update_work_item.py  validate_sync.py
